POWR-983 Update news date format for default and featured display modes

--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -18,6 +18,7 @@ dependencies:
     - node.type.news
   module:
     - ds
+    - field_group
     - panelizer
     - text
     - user
@@ -37,15 +38,62 @@ third_party_settings:
     regions:
       content:
         - field_featured_media
+        - group_meta
         - node_post_date
         - field_summary
         - field_body_content
     fields:
       node_post_date:
         plugin_id: node_post_date
-        weight: 1
+        weight: 2
         label: hidden
-        formatter: ds_post_date_long
+        formatter: ds_post_date_month_day_year
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: Published
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
+  field_group:
+    group_meta:
+      children:
+        - node_post_date
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        label: Meta
+        element: span
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+        id: ''
+        classes: 'd-block small mb-3'
+      label: Meta
+      region: content
 id: node.news.default
 targetEntityType: node
 bundle: news
@@ -53,7 +101,7 @@ mode: default
 content:
   field_body_content:
     type: text_default
-    weight: 3
+    weight: 4
     region: content
     label: hidden
     settings: {  }
@@ -83,7 +131,7 @@ content:
             classes: {  }
     region: content
   field_summary:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       link_to_entity: false
