--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -13,11 +13,13 @@ dependencies:
     - field.field.node.news.field_published_on
     - field.field.node.news.field_related_content
     - field.field.node.news.field_reviewer
+    - field.field.node.news.field_search_keywords
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
   module:
     - ds
+    - field_group
     - panelizer
     - user
 third_party_settings:
@@ -45,10 +47,44 @@ third_party_settings:
     regions:
       first:
         - node_title
+        - group_meta_wrapper
+        - node_post_date
         - field_summary
       second:
         - field_featured_media
     fields:
+      node_post_date:
+        plugin_id: node_post_date
+        weight: 2
+        label: hidden
+        formatter: ds_post_date_month_day_year
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: Published
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: span
+            ow-cl: 'small mb-1'
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: span
+            fi-cl: 'small mb-1'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
       node_title:
         plugin_id: node_title
         weight: 0
@@ -64,6 +100,25 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
+  field_group:
+    group_meta_wrapper:
+      children:
+        - node_post_date
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        label: Meta
+        element: span
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+        id: ''
+        classes: 'small mb-1'
+      label: Meta
+      region: hidden
 id: node.news.featured
 targetEntityType: node
 bundle: news
@@ -71,7 +126,7 @@ mode: featured
 content:
   field_featured_media:
     type: entity_reference_entity_view
-    weight: 0
+    weight: 4
     region: second
     label: hidden
     settings:
@@ -86,7 +141,7 @@ content:
             lb-col: false
             classes: {  }
   field_summary:
-    weight: 1
+    weight: 3
     label: hidden
     settings:
       link_to_entity: false
@@ -110,5 +165,6 @@ hidden:
   field_published_on: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_topics: true
   links: true
