--- a/composer.json
+++ b/composer.json
@@ -192,8 +192,7 @@
                 "2948260 - Tokens not substituted in query string": "https://www.drupal.org/files/issues/2018-09-21/2988939-allow-query-parameters-12.diff"
             },
             "drupal/easy_breadcrumb": {
-                "2979389 - Titles in breadcrumbs are 'double-escaped'": "https://www.drupal.org/files/issues/2018-06-21/2979389-7-easy-breadcrumb--double-escaped-titles.patch",
-                "Add taxonomy term name to breadcrumb": "patches/powr-826-taxonomy-term-in-breadcrumb.patch"
+                "2979389 - Titles in breadcrumbs are 'double-escaped'": "https://www.drupal.org/files/issues/2018-06-21/2979389-7-easy-breadcrumb--double-escaped-titles.patch"
             },
             "drupal/embed": {
                 "2824110 - Allow site-builders to use a non-managed file as button icon": "https://www.drupal.org/files/issues/2018-07-03/embed-allow-non-managed-button-icon-files-2824110-9.patch"
