POWR-983 Remove unused class

--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -58,7 +58,7 @@ third_party_settings:
         effect: none
         speed: fast
         id: ''
-        classes: 'date mb-4'
+        classes: mb-4
       label: 'Start to end date'
       region: content
 id: group.project.default
