POWR-983 Update published date classes

--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -91,7 +91,7 @@ third_party_settings:
         effect: none
         speed: fast
         id: ''
-        classes: 'd-block small mb-3'
+        classes: 'd-block mb-3'
       label: Meta
       region: content
 id: node.news.default
