POWR-826 Update permissions

--- a/web/sites/default/config/core.entity_view_display.node.policy.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.policy.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.policy.field_reviewer
     - node.type.policy
   module:
+    - ds
     - panelizer
     - text
     - user
@@ -37,9 +38,17 @@ content:
     weight: 1
     label: hidden
     settings:
-      link: true
-      view_mode: default
-    third_party_settings: {  }
+      view_mode: embedded
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_entity_view
     region: content
 hidden:
