--- a/web/sites/default/config/core.entity_form_display.node.policy.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.policy.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_browser
+    - entity_browser.browser.document_browser_embed
     - field.field.node.policy.field_body_content
     - field.field.node.policy.field_documents
     - field.field.node.policy.field_legacy_path
@@ -42,15 +42,14 @@ content:
     type: entity_browser_entity_reference
     weight: 5
     settings:
-      entity_browser: media_browser
-      field_widget_display: rendered_entity
-      field_widget_edit: true
+      entity_browser: document_browser_embed
+      field_widget_display: label
       field_widget_remove: true
-      selection_mode: selection_append
-      field_widget_display_settings:
-        view_mode: thumbnail
       open: true
+      selection_mode: selection_append
+      field_widget_edit: false
       field_widget_replace: false
+      field_widget_display_settings: {  }
     region: content
     third_party_settings: {  }
   field_legacy_path:
