POWR-826 clean up the taxonomy types and add section paragraphs

--- a/web/sites/default/config/core.entity_view_display.node.council_meeting.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_meeting.default.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.node.council_meeting.field_agenda
-    - field.field.node.council_meeting.field_agenda_type
     - field.field.node.council_meeting.field_council_meeting_status
+    - field.field.node.council_meeting.field_council_meeting_type
     - field.field.node.council_meeting.field_notes
     - field.field.node.council_meeting.field_start_date
     - field.field.node.council_meeting.field_start_time
@@ -36,25 +36,18 @@ content:
     settings:
       view_mode: default
       link: ''
-    third_party_settings: {  }
-    region: content
-  field_agenda_type:
-    weight: 1
-    label: above
-    settings:
-      link: false
     third_party_settings:
       ds:
+        ds_limit: ''
         ft:
           id: default
           settings:
-            lb: ''
+            lb: Agenda
             lb-col: false
             classes: {  }
-    type: entity_reference_label
     region: content
   field_council_meeting_status:
-    weight: 0
+    weight: 2
     label: hidden
     settings:
       link: false
@@ -68,16 +61,24 @@ content:
             classes: {  }
     type: entity_reference_label
     region: content
+  field_council_meeting_type:
+    weight: 6
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_notes:
     weight: 4
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_start_date:
-    weight: 2
-    label: above
+    weight: 0
+    label: hidden
     settings:
       format_type: medium
       timezone_override: ''
@@ -85,12 +86,20 @@ content:
     type: datetime_default
     region: content
   field_start_time:
-    weight: 3
-    label: above
+    weight: 1
+    label: inline
     settings:
-      time_format: 'h:i a'
-    third_party_settings: {  }
+      time_format: 'g:i A'
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: time_formatter
     region: content
 hidden:
+  content_moderation_control: true
   links: true
