--- a/web/sites/default/config/core.entity_view_display.paragraph.council_agenda_item.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.council_agenda_item.default.yml
@@ -4,13 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.council_agenda_item.field_agenda_item_number
-    - field.field.paragraph.council_agenda_item.field_agenda_item_type
     - field.field.paragraph.council_agenda_item.field_council_document
+    - field.field.paragraph.council_agenda_item.field_notes
     - field.field.paragraph.council_agenda_item.field_time
     - field.field.paragraph.council_agenda_item.field_time_requested
     - paragraphs.paragraphs_type.council_agenda_item
   module:
     - ds
+    - text
     - time_field
 id: paragraph.council_agenda_item.default
 targetEntityType: paragraph
@@ -26,10 +27,11 @@ content:
     third_party_settings: {  }
     type: number_integer
     region: content
-  field_agenda_item_type:
-    weight: 0
+  field_council_document:
+    weight: 3
     label: hidden
     settings:
+      view_mode: teaser
       link: false
     third_party_settings:
       ds:
@@ -39,22 +41,14 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-    type: entity_reference_label
+    type: entity_reference_entity_view
     region: content
-  field_council_document:
-    weight: 3
+  field_notes:
+    weight: 5
     label: hidden
-    settings:
-      link: true
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-    type: entity_reference_label
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
     region: content
   field_time:
     weight: 2
