--- a/web/sites/default/config/field.field.paragraph.council_agenda_section.field_council_agenda_type.yml
+++ b/web/sites/default/config/field.field.paragraph.council_agenda_section.field_council_agenda_type.yml
@@ -1,22 +1,22 @@
-uuid: e9833e24-1723-4306-ae60-76a4fbb6fd65
+uuid: 885a836a-a1ec-4417-b77e-243cf4ca42cf
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_agenda_type
-    - node.type.council_meeting
-    - taxonomy.vocabulary.agenda_type
+    - field.storage.paragraph.field_council_agenda_type
+    - paragraphs.paragraphs_type.council_agenda_section
+    - taxonomy.vocabulary.council_agenda_type
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.council_meeting.field_agenda_type
-field_name: field_agenda_type
-entity_type: node
-bundle: council_meeting
-label: 'Agenda type'
+id: paragraph.council_agenda_section.field_council_agenda_type
+field_name: field_council_agenda_type
+entity_type: paragraph
+bundle: council_agenda_section
+label: 'Council agenda type'
 description: ''
 required: false
 translatable: false
@@ -26,7 +26,7 @@ settings:
   handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      agenda_type: agenda_type
+      council_agenda_type: council_agenda_type
     sort:
       field: name
       direction: asc
