--- a/web/sites/default/config/field.storage.paragraph.field_agenda_item.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_agenda_item.yml
@@ -1,23 +1,23 @@
-uuid: fc61d371-facd-4712-8b58-b25413e6b2c2
+uuid: 9e01581b-ee98-4ce5-be49-7374efa26aa8
 langcode: en
 status: true
 dependencies:
   module:
+    - entity_reference_revisions
     - field_permissions
     - paragraphs
-    - taxonomy
 third_party_settings:
   field_permissions:
     permission_type: public
-id: paragraph.field_agenda_item_type
-field_name: field_agenda_item_type
+id: paragraph.field_agenda_item
+field_name: field_agenda_item
 entity_type: paragraph
-type: entity_reference
+type: entity_reference_revisions
 settings:
-  target_type: taxonomy_term
-module: core
+  target_type: paragraph
+module: entity_reference_revisions
 locked: false
-cardinality: 1
+cardinality: -1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
