--- a/web/sites/default/config/taxonomy.vocabulary.council_meeting_type.yml
+++ b/web/sites/default/config/taxonomy.vocabulary.council_meeting_type.yml
@@ -1,9 +1,9 @@
-uuid: 665944dc-d9f2-4202-8218-a50c5f757658
+uuid: 1aaa490a-ba36-4c97-afa5-1212706a9af4
 langcode: en
 status: true
 dependencies: {  }
-name: 'Agenda type'
-vid: agenda_type
+name: 'Council meeting type'
+vid: council_meeting_type
 description: 'There are several types of council meetings.'
 hierarchy: 0
 weight: 0
