--- a/web/sites/default/config/core.entity_form_display.node.council_meeting.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.council_meeting.default.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.node.council_meeting.field_agenda
-    - field.field.node.council_meeting.field_agenda_type
     - field.field.node.council_meeting.field_council_meeting_status
+    - field.field.node.council_meeting.field_council_meeting_type
     - field.field.node.council_meeting.field_notes
     - field.field.node.council_meeting.field_start_date
     - field.field.node.council_meeting.field_start_time
@@ -32,32 +32,35 @@ content:
     type: paragraphs
     weight: 6
     settings:
-      title: 'Agenda item'
-      title_plural: 'Agenda items'
-      edit_mode: open
+      title: 'Agenda section'
+      title_plural: 'Agenda sections'
+      edit_mode: closed_expand_nested
       closed_mode: preview
       autocollapse: none
       closed_mode_threshold: 0
       add_mode: button
       form_display_mode: default
-      default_paragraph_type: council_agenda_item
+      default_paragraph_type: council_agenda_section
       features:
         duplicate: duplicate
         collapse_edit_all: collapse_edit_all
         add_above: add_above
     third_party_settings: {  }
     region: content
-  field_agenda_type:
-    weight: 2
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
   field_council_meeting_status:
     weight: 1
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
+  field_council_meeting_type:
+    weight: 26
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   field_notes:
     weight: 5
