--- a/web/sites/default/config/core.entity_form_display.paragraph.council_agenda_item.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.council_agenda_item.default.yml
@@ -4,13 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.council_agenda_item.field_agenda_item_number
-    - field.field.paragraph.council_agenda_item.field_agenda_item_type
     - field.field.paragraph.council_agenda_item.field_council_document
+    - field.field.paragraph.council_agenda_item.field_notes
     - field.field.paragraph.council_agenda_item.field_time
     - field.field.paragraph.council_agenda_item.field_time_requested
     - paragraphs.paragraphs_type.council_agenda_item
   module:
     - chosen_field
+    - text
     - time_field
 id: paragraph.council_agenda_item.default
 targetEntityType: paragraph
@@ -24,17 +25,19 @@ content:
     third_party_settings: {  }
     type: number
     region: content
-  field_agenda_item_type:
-    weight: 0
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
   field_council_document:
     weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
+    region: content
+  field_notes:
+    weight: 5
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
     region: content
   field_time:
     weight: 2
