--- a/web/sites/default/config/field.field.node.council_meeting.field_council_meeting_type.yml
+++ b/web/sites/default/config/field.field.node.council_meeting.field_council_meeting_type.yml
@@ -1,22 +1,22 @@
-uuid: f2347214-635f-422f-aaf8-8d67cc93a9cb
+uuid: 2d544f56-3345-477f-9720-eca4222e964f
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_agenda_item_type
-    - paragraphs.paragraphs_type.council_agenda_item
-    - taxonomy.vocabulary.agenda_item_type
+    - field.storage.node.field_council_meeting_type
+    - node.type.council_meeting
+    - taxonomy.vocabulary.council_meeting_type
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: paragraph.council_agenda_item.field_agenda_item_type
-field_name: field_agenda_item_type
-entity_type: paragraph
-bundle: council_agenda_item
-label: 'Agenda item type'
+id: node.council_meeting.field_council_meeting_type
+field_name: field_council_meeting_type
+entity_type: node
+bundle: council_meeting
+label: 'Council meeting type'
 description: ''
 required: false
 translatable: false
@@ -26,7 +26,7 @@ settings:
   handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      agenda_item_type: agenda_item_type
+      council_meeting_type: council_meeting_type
     sort:
       field: name
       direction: asc
