--- a/web/sites/default/config/field.field.paragraph.council_agenda_section.field_agenda_item.yml
+++ b/web/sites/default/config/field.field.paragraph.council_agenda_section.field_agenda_item.yml
@@ -1,11 +1,12 @@
-uuid: ad5cab5f-486b-41a3-bcff-9fa877002f6b
+uuid: e736b5e4-9d04-4abe-ba56-361ea5172ec2
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_agenda
-    - node.type.council_meeting
+    - field.storage.paragraph.field_agenda_item
+    - paragraphs.paragraphs_type.council_agenda_item
     - paragraphs.paragraphs_type.council_agenda_section
+    - paragraphs.paragraphs_type.council_communication_item
   module:
     - custom_add_another
     - entity_reference_revisions
@@ -13,11 +14,11 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.council_meeting.field_agenda
-field_name: field_agenda
-entity_type: node
-bundle: council_meeting
-label: Agenda
+id: paragraph.council_agenda_section.field_agenda_item
+field_name: field_agenda_item
+entity_type: paragraph
+bundle: council_agenda_section
+label: 'Agenda item'
 description: ''
 required: false
 translatable: false
@@ -28,81 +29,82 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
-      council_agenda_section: council_agenda_section
+      council_agenda_item: council_agenda_item
+      council_communication_item: council_communication_item
     target_bundles_drag_drop:
       address:
-        weight: 23
-        enabled: false
-      audio:
-        weight: 24
-        enabled: false
-      building:
         weight: 25
         enabled: false
-      card:
+      audio:
         weight: 26
         enabled: false
-      card_deck:
+      building:
         weight: 27
         enabled: false
-      columns_equal:
+      card:
         weight: 28
         enabled: false
-      council_agenda_item:
+      card_deck:
         weight: 29
         enabled: false
-      document:
+      columns_equal:
         weight: 30
         enabled: false
-      email_button:
+      council_agenda_item:
+        enabled: true
         weight: 31
-        enabled: false
-      fax_button:
+      council_agenda_section:
         weight: 32
         enabled: false
-      form_app_button:
+      document:
         weight: 33
         enabled: false
-      council_agenda_section:
-        enabled: true
-        weight: 33
       council_communication_item:
+        enabled: true
+        weight: 34
+      email_button:
         weight: 34
         enabled: false
-      group_contact_information:
-        weight: 34
-        enabled: false
-      image:
+      fax_button:
         weight: 35
         enabled: false
-      location:
+      form_app_button:
         weight: 36
         enabled: false
-      quote:
+      group_contact_information:
         weight: 37
         enabled: false
-      service_location:
+      image:
         weight: 38
         enabled: false
-      service_mode:
+      location:
         weight: 39
         enabled: false
-      service_step:
+      quote:
         weight: 40
         enabled: false
-      simple_text:
+      service_location:
         weight: 41
         enabled: false
-      telephone_button:
+      service_mode:
         weight: 42
         enabled: false
-      video:
+      service_step:
         weight: 43
         enabled: false
-      webform:
+      simple_text:
         weight: 44
         enabled: false
+      telephone_button:
+        weight: 45
+        enabled: false
+      video:
+        weight: 46
+        enabled: false
       votes:
-        weight: 49
+        weight: 47
+        enabled: false
+      webform:
+        weight: 48
         enabled: false
 field_type: entity_reference_revisions
