--- a/web/sites/default/config/field.storage.paragraph.field_council_communication_text.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_council_communication_text.yml
@@ -1,20 +1,19 @@
-uuid: cdb79f58-518f-44ca-b1b6-0002587619a3
+uuid: 89de0e06-da92-4b65-a9ad-8b1ee7816e77
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
-    - node
-    - taxonomy
+    - paragraphs
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_agenda_type
-field_name: field_agenda_type
-entity_type: node
-type: entity_reference
+id: paragraph.field_council_communication_text
+field_name: field_council_communication_text
+entity_type: paragraph
+type: string_long
 settings:
-  target_type: taxonomy_term
+  case_sensitive: false
 module: core
 locked: false
 cardinality: 1
