--- a/web/sites/default/config/views.view.policy.yml
+++ b/web/sites/default/config/views.view.policy.yml
@@ -157,7 +157,17 @@ display:
           expose:
             label: ''
       title: Policy
-      header: {  }
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: '@total policies found'
+          plugin_id: result
       footer: {  }
       empty: {  }
       relationships: {  }
