POWR-938 Remove unused classes and extra space between icon and event time

--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -186,8 +186,8 @@ content:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: span
-            fi-cl: event--end-date
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -204,14 +204,14 @@ content:
     weight: 6
     label: hidden
     settings:
-      time_format: '\t\o g:i A'
+      time_format: 'g:i A'
     third_party_settings:
       ds:
         ft:
           id: expert
           settings:
             lb: ''
-            prefix: ''
+            prefix: '<span class="px-1">to</span>'
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -222,8 +222,8 @@ content:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: span
-            fi-cl: 'event--end-time pl-1'
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -292,8 +292,8 @@ content:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: span
-            fi-cl: event--start-date
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -328,8 +328,8 @@ content:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: span
-            fi-cl: 'event--start-time pl-2'
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
