POWR-990 update templates, views, form displays, ds group name

--- a/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
@@ -13,11 +13,13 @@ dependencies:
     - field.field.group.elected_official.field_enable_news_and_notices_me
     - field.field.group.elected_official.field_enable_offices_and_program
     - field.field.group.elected_official.field_enable_projects_menu_item
+    - field.field.group.elected_official.field_featured_content
+    - field.field.group.elected_official.field_featured_groups
     - field.field.group.elected_official.field_legacy_path
-    - field.field.group.elected_official.field_logo
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_phone
+    - field.field.group.elected_official.field_search_keywords
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - group.type.elected_official
@@ -59,8 +61,9 @@ hidden:
   field_enable_news_and_notices_me: true
   field_enable_offices_and_program: true
   field_enable_projects_menu_item: true
+  field_featured_content: true
+  field_featured_groups: true
   field_legacy_path: true
-  field_logo: true
   field_menu_link: true
   field_official_title: true
   field_phone: true
