--- a/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
@@ -8,9 +8,18 @@ dependencies:
     - field.field.group.elected_official.field_building
     - field.field.group.elected_official.field_bureaus
     - field.field.group.elected_official.field_email
-    - field.field.group.elected_official.field_logo
+    - field.field.group.elected_official.field_enable_events_menu_item
+    - field.field.group.elected_official.field_enable_guides_and_informat
+    - field.field.group.elected_official.field_enable_news_and_notices_me
+    - field.field.group.elected_official.field_enable_offices_and_program
+    - field.field.group.elected_official.field_enable_projects_menu_item
+    - field.field.group.elected_official.field_featured_content
+    - field.field.group.elected_official.field_featured_groups
+    - field.field.group.elected_official.field_legacy_path
+    - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_phone
+    - field.field.group.elected_official.field_search_keywords
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - group.type.elected_official
@@ -51,13 +60,26 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
+  group_site_menu_entity_view_1:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
 hidden:
   changed: true
   created: true
   field_building: true
   field_bureaus: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_offices_and_program: true
+  field_enable_projects_menu_item: true
+  field_featured_content: true
+  field_featured_groups: true
   field_legacy_path: true
-  field_logo: true
+  field_menu_link: true
+  field_search_keywords: true
   field_shortname_or_acronym: true
   field_summary: true
   label: true
