--- a/web/sites/default/config/views.view.group_site_menu.yml
+++ b/web/sites/default/config/views.view.group_site_menu.yml
@@ -618,7 +618,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<ul class=\"nav nav-group\">\r\n{{ field_enable_services_and_inform }}\r\n{{ field_enable_guides_and_informat }}\r\n{{ field_enable_news_and_notices_me }}\r\n{{ field_enable_events_menu_item }}\r\n{{ field_enable_documents_menu_item }}\r\n{{ field_enable_offices_and_program }}\r\n{{ field_enable_programs_menu_item }}\r\n{{ field_enable_projects_menu_item }}\r\n</ul>"
+            text: "<ul class=\"nav nav-group mb-5\">\r\n{{ field_enable_services_and_inform }}\r\n{{ field_enable_guides_and_informat }}\r\n{{ field_enable_news_and_notices_me }}\r\n{{ field_enable_events_menu_item }}\r\n{{ field_enable_documents_menu_item }}\r\n{{ field_enable_offices_and_program }}\r\n{{ field_enable_programs_menu_item }}\r\n{{ field_enable_projects_menu_item }}\r\n</ul>"
             make_link: false
             path: ''
             absolute: false
