POWR-983 Hide group featured events block on group homepages if no events exist

--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -812,6 +812,7 @@ display:
         use_more_always: false
         use_more_text: false
         fields: false
+        empty: false
       pager:
         type: some
         options:
@@ -1320,6 +1321,7 @@ display:
           empty_zero: false
           hide_alter_empty: false
           plugin_id: custom
+      empty: {  }
     cache_metadata:
       max-age: -1
       contexts:
